# smart-time-tracker

./: .gitignore  CHANGELOG.md  README.md  biome.json  docker-compose.yml  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: CHANGELOG.md  DEPLOYMENT.md  SECURITY.md  TESTING.md
src/: App.tsx  index.css  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/commands/: activity.rs  export.rs  mod.rs  power.rs  timer.rs  updater.rs
src-tauri/src/monitor/: debounce.rs  mod.rs  process_detector.rs
src-tauri/src/store/: mod.rs
src/components/: ProjectList.tsx  TaskSelector.tsx  TrackerCard.tsx
src/hooks/: use-activity-monitor.ts  use-keyboard-shortcut.ts  use-projects.ts  use-settings.ts  use-theme.ts  use-time-log.ts  use-timer.ts  use-update-checker.ts
src/store/: projects.ts  settings.ts  timer.ts
src/types/: index.ts
src/utils/: duration.test.ts  duration.ts  export.test.ts  export.ts
